Grind now works on mobile; Move input field below play field on mobile; Add arrows to input field; Add stroke to input field so user can see touch area; Prevent warnings in chrome by adding touch-action: none; Fix width of game on screens >= 768px and <= 800px wide

--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,6 @@
 html, body, .layer {
   width: 100%;
-  height: 450px;
+  height: 100%;
 }
 
 body {
@@ -112,7 +112,7 @@ body.attract #attract, body.waiting #waiting, body.playing #playing, body.game-o
 }
 
 #time-remaining-track.grind {
-  stroke: #ff8000;
+  stroke: #ff7500;
 }
 
 #out {
@@ -130,14 +130,12 @@ body.up #up, body.right #right, body.down #down, body.left #left {
 }
 
 #input {
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 15px;
 }
 
 #score {
   width: 250px;
-  margin-top: 30px;
+  margin-top: 15px;
   padding: 10px;
   text-align: center;
   font-weight: bold;
@@ -168,10 +166,16 @@ body.up #up, body.right #right, body.down #down, body.left #left {
 
 @media screen and (min-width: 768px) {
   body, .layer {
-    width: 800px;
+    width: 750px;
+    height: 450px;
+  }
+
+  #input {
+    display: none;
   }
 
   #score {
+    margin-top: 30px;
     font-size: 46px;
   }
 
