--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body {
 #game-wrapper {
   margin: 0 auto;
   width: 100%;
-  height: 450px;
+  height: 100%;
 }
 
 #game {
@@ -31,7 +31,8 @@ body {
   }
 
   #game-wrapper {
-    width: 800px;
+    width: 750px;
+    height: 450px;
   }
 
   #game {
@@ -42,7 +43,7 @@ body {
   #description {
     margin: 100px auto 0 auto;
     padding: 20px;
-    width: 800px;
+    width: 750px;
     border-radius: 2px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.27);
   }
